feat: refactor AuthController and SecurityConfig for improved dependency injection and encoding